feat: add vscode

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "brook-code-theme",
+  "name": "one-thing-theme",
   "version": "1.0.1",
-  "displayName": "Brook Code Theme",
+  "displayName": "One thing theme",
   "publisher": "weecraft",
   "description": "A mono chrome with minimal looks and simple styles code editor themes for light & dark environments for perfect developer productivity",
   "keywords": [
@@ -52,11 +52,5 @@
         "path": "./themes/brook-code-dark.json"
       }
     ]
-  },
-  "scripts": {
-    "format": "prettier --write ."
-  },
-  "devDependencies": {
-    "prettier": "^3.3.3"
   }
 }
