--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.4",
+    "@content-collections/cli": "^0.1.7",
+    "@content-collections/core": "^0.12.0",
+    "@content-collections/mdx": "^0.2.2",
+    "@content-collections/vite": "^0.2.7",
     "turbo": "^2.6.0",
-    "ultracite": "6.3.2"
+    "ultracite": "6.3.2",
+    "zod": "^4.1.12"
   },
   "packageManager": "bun@1.2.0",
   "workspaces": [
