--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
-    "turbo": "^2.6.0",
-    "ultracite": "6.3.2",
-    "zod": "^4.1.12"
+    "turbo": "^2.6.1",
+    "ultracite": "6.3.8"
   },
   "packageManager": "bun@1.2.0",
   "workspaces": [
